<resources>
    <string name="app_name">ACM App Austin Vargason</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="nav_home_title">Home</string>
    <string name="nav_announcements_title">Announcements</string>
    <string name="nav_resources_title">Resources</string>
    <string name="nav_about_us_title">About Us</string>
    <string name="social_media_title">Social Media</string>
    <string name="nav_facebook_title">Facebook</string>
    <string name="nav_instagram_title">Instagram</string>
    <string name="resources_note_card_text">If you have any questions or concerns about office hours, workshop
             times, tutoring hours or just want to give us some general feed back,
             feel free to send us an email! You can also reach out to us on our
              official facebook page and Instagram!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_splash">Splash</string>
</resources>
